Update Digital Garden info
Added links to my digital garden https://notes.chanduavni.com to index.html

--- a/index.html
+++ b/index.html
@@ -171,12 +171,12 @@
             </p>
 
             <div class="about__buttons">
-<!--
-              <a href="/digital-garden" class="button__ghost">
+
+              <a href="https://notes.chanduavni.com" class="button__ghost">
                 <i class="ri-plant-line"></i>
                 <span class="button__ghost-title">My Posts</span>
               </a>
--->
+
               <a href="https://www.linkedin.com/in/chanduavni/" class="button__ghost">
                 <i class="ri-linkedin-box-line"></i>
                 <span class="button__ghost-title">LinkedIn Profile</span>
@@ -190,7 +190,7 @@
           </div>
         </div>
       </section>
-    <!-- Digital Garden
+
       <section class="mywork section" id="mywork">
         <h2 class="section__title-2">
           <span>My Work</span>
@@ -198,7 +198,7 @@
         <div class="mywork__container container grid">
           <article class="mywork__card">
             <a
-              href="/digital-garden"
+              href="https://notes.chanduavni.com"
               target="_blank"
               class="mywork__link"
             >
@@ -209,7 +209,7 @@
                   class="mywork__img"
                 />
                 <a
-                  href="/digital-garden"
+                  href="https://notes.chanduavni.com"
                   target="_blank"
                   class="mywork__button button"
                 >
@@ -228,7 +228,7 @@
             </div>
 
             <a
-              href="/digital-garden"
+              href="https://notes.chanduavni.com"
               target="_blank"
               class="mywork__show button"
             >
@@ -236,7 +236,7 @@
             </a>
           </article>
       </section>
- -->
+
     </main>
 
     <footer class="footer">
