Add photo to assets
Added photo for digital garden description in index.html to assets

--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
             >
               <div class="mywork__image">
                 <img
-                  src="assets/img/digital-garden.png"
-                  alt="art-store-eta"
+                  src="assets/img/pexels-photomix-company-1002703.jpg"
+                  alt="keyboard with a small plant sprouting from the F key"
                   class="mywork__img"
                 />
                 <a
@@ -221,7 +221,6 @@
             <div class="mywork__content">
               <h3 class="mywork__subtitle">Personal Website</h3>
               <h2 class="mywork__title">My Digital Garden</h2>
-
               <p class="mywork__description">
                 This is a place where I post about my thoughts and progress on various matters.
               </p>
@@ -247,8 +246,7 @@
         </ul>
 
         <span class="footer__copy">
-          &#169; All Rights Reserved By
-          <a href="#">Chandu Avni</a>
+          &#169; 2023 <a href="#">Chandu Avni</a>
         </span>
       </div>
     </footer>
