Update alt text
Update alt text for stock photo for digital garden description

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
               <div class="mywork__image">
                 <img
                   src="assets/img/pexels-photomix-company-1002703.jpg"
-                  alt="keyboard with a small plant sprouting from the F key"
+                  alt="Close up photo of a sprout"
                   class="mywork__img"
                 />
                 <a
