--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 class="home__img"
               />
               <div class="home__shadow"></div>
-
+              <div class="geometric-box"></div>
               <img
                 src="assets/img/curved-arrow.svg"
                 alt="curved-arrow"
