--- a/index.html
+++ b/index.html
@@ -111,6 +111,14 @@
               </a>
 
               <a
+              href="https://notes.chanduavni.com
+              target="_blank"
+              class="home__social-link"
+            >
+              <i class="ri-plant-line"></i>
+            </a>
+
+              <a
                 href="https://github.com/ch4ndua"
                 target="_blank"
                 class="home__social-link"
