--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               </a>
 
               <a
-              href="https://notes.chanduavni.com
+              href="https://notes.chanduavni.com"
               target="_blank"
               class="home__social-link"
             >
