--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         </ul>
 
         <span class="footer__copy">
-          &#169; 2023 <a href="#">Chandu Avni</a>
+          &#169; 2023-2024 <a href="#">Chandu Avni</a>
         </span>
       </div>
     </footer>
