Update headline and experience

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
           <div class="home__info">
             <p class="home__description">
-              Emerging Technology Development, Project Management, and Ethical Research
+              Technology Management, Development, and Research
             </p>
 
             <a href="#about" class="home__scroll">
@@ -174,8 +174,8 @@
 
           <div class="about__info">
             <p class="about__description">
-              I bring software development projects from inception to completion. 
-              My experience includes <b>social robotics</b>, <b>privacy</b>, and <b>technology ethics research</b>.
+              I am a technologist who implements, services, and develops software solutions.
+              My industry and academic experience spans <b>social robotics</b>, <b>privacy</b>, and <b>responsible technology research</b>.
             </p>
 
             <div class="about__buttons">
