Add GitHub link

--- a/index.html
+++ b/index.html
@@ -189,6 +189,12 @@
                 <i class="ri-linkedin-box-line"></i>
                 <span class="button__ghost-title">LinkedIn Profile</span>
               </a>
+
+              <a href="https://github.com/ch4ndua" class="button__ghost">
+                <i class="ri-github-line"></i>
+                <span class="button__ghost-title">GitHub</span>
+              </a>
+
               <a href="mailto: contact@chanduavni.com" class="button__ghost">
                 <i class="ri-send-plane-line"></i>
                 <span class="button__ghost-title">Email Me</span>
